--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -23,7 +23,7 @@
     <div class="col-lg-6 col-md-8 col-sm-10">
       <div class="card listing-card shadow-sm">
         <img src="<%= listing.image.url %>" class="card-img-top img-fluid" alt="listing_image">
-        <div class="card-body">
+        <div class="card-body ms-2">
           <p class="card-text">Owned by: <i><%= listing.owner.username %></i></p>
           <p class="card-text"><%= listing.description %></p>
           <p class="card-text">₹ <%= listing.price.toLocaleString("en-IN") %></p>
@@ -98,14 +98,16 @@
     <% for(let review of listing.reviews){ %>
     <div class="col-md-5 mb-3">
       <div class="card shadow-sm">
-        <div class="card-body">
+        <div class="card-body m-2">
           <h6 class="card-title">@<%= review.author.username %></h6>
           <p class="starability-result card-text" data-rating="<%= review.rating %>"></p>
           <p class="card-text"><%= review.comment %></p>
         </div>
+        <% if(currUser && listing.owner._id.equals(currUser._id)){ %>
         <form action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST" class="m-2">
           <button class="btn btn-sm btn-dark">Delete</button>
         </form>
+        <% } %>
       </div>
     </div>
     <% } %>
