--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -41,7 +41,7 @@
     <% if(currUser && listing.owner._id.equals(currUser._id)) { %>
         <div class="row justify-content-center mb-4">
             <div class="col-12 col-md-10 col-lg-8 d-flex flex-wrap gap-2">
-                <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark">Edit</a>
+                <a href="/listings/<%= listing._id %>/edit" class="btn btn-danger">Edit</a>
                 <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE">
                     <button class="btn btn-dark">Delete</button>
                 </form>
