--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,8 +1,9 @@
 <% layout("/layouts/boilerplate") %>
 
-    <div class="row mt-3">
-        <h1 class="col-6 offset-3">Login on Wanderlust</h1>
-        <div class="col-6 offset-3">
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-12 col-sm-10 col-md-8 col-lg-6 col-xl-5 m-3">
+            <h1 class="text-center mb-4">Login on Wanderlust</h1>
             <form action="/login" method="POST" class="needs-validation" novalidate>
                 <div class="mb-3">
                     <label for="username" class="form-label">Username</label>
@@ -12,11 +13,14 @@
 
                 <div class="mb-3">
                     <label for="password" class="form-label">Password</label>
-                    <input id="password" type="password" name="password" placeholder="Enter password"
+                    <input id="password" type="password" name="password" placeholder="Enter Password"
                         class="form-control" required>
                 </div>
 
-                <button class="btn btn-success">Login</button>
+                <div class="d-grid">
+                    <button class="btn btn-success">Login</button>
+                </div>
             </form>
         </div>
     </div>
+</div>
