--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -1,14 +1,16 @@
 <% layout("/layouts/boilerplate") %>
 
-    <div class="row mt-3">
-        <h1 class="col-6 offset-3">SignUp on Wanderlust</h1>
-        <div class="col-6 offset-3">
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-12 col-sm-10 col-md-8 col-lg-6 col-xl-5 m-3">
+            <h1 class="text-center mb-4">SignUp on Wanderlust</h1>
             <form action="/signup" method="POST" class="needs-validation" novalidate>
+                
                 <div class="mb-3">
                     <label for="username" class="form-label">Username</label>
                     <input id="username" type="text" name="username" placeholder="Enter Username"
                         class="form-control" required>
-                        <div class="valid-feedback">Looks good!</div>
+                    <div class="valid-feedback">Looks good!</div>
                 </div>
 
                 <div class="mb-3">
@@ -19,11 +21,14 @@
 
                 <div class="mb-3">
                     <label for="password" class="form-label">Password</label>
-                    <input id="password" type="password" name="password" placeholder="Enter password"
+                    <input id="password" type="password" name="password" placeholder="Enter Password"
                         class="form-control" required>
                 </div>
 
-                <button class="btn btn-success">SignUp</button>
+                <div class="d-grid">
+                    <button class="btn btn-success">SignUp</button>
+                </div>
             </form>
         </div>
     </div>
+</div>
